--- a/srcs/requirements/bonus/nodejs/tools/public/index.html
+++ b/srcs/requirements/bonus/nodejs/tools/public/index.html
@@ -1,23 +1,119 @@
+html
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Inception</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Static site</title>
+	<!-- <link rel="stylesheet" href="./style.css"> -->
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
+* {
+	padding: 0;
+	margin: 0;
+
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+body {
+	position: relative;
+	cursor: pointer;
+	overflow: hidden;
+
+	height: 100vh;
+	padding: 50px;
+	display: flex;
+	flex-direction: column;
+
+	text-align: center;
+	font-family: 'PT Sans', sans-serif;
+	font-size: 20px;
+	color: white;
+
+	background: #aa4b6b;
+	background: -webkit-linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
+	background: linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
+
+}
+
+.services {
+	margin-bottom: 50px;
+}
+
+.con {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: space-between;
+	z-index: 1;
+}
+
+.dvide {
+	border-top: 80vh solid #6b6b83;
+}
+
+.wordpress {
+	width: 50%;
+	height: 100%;
+}
+
+.adminer {
+	width: 50%;
+	height: 100%;
+}
+
+h3 {
+	height: 100vh;
+}
+
+a {
+	text-decoration: none;
+	color: white;
+}
+
+.body::after {
+	z-index: 0;
+	content: "";
+	position: absolute;
+	top: calc(var(--y, 0) * 1px - 45px);
+	left: calc(var(--x, 0) * 1px - 47px);
+	width: 100px;
+	height: 100px;
+	background: radial-gradient(white, #3984ff00 80%);
+
+	opacity: 0;
+	transition: opacity 0.2s;
+}
+
+.body:hover::after {
+	opacity: 0.4;
+}
+	</style>
 </head>
-<body>
-    <div class="title"><h1>INCEPTION</h1></div>
-    <div class="links">
-        <ul>
-            <li>
-                <a href="https://aaqlzim.42.fr">wordpress site</a>
-            </li>
-            <li>
-                <a href="aaqlzim.42.fr:5000">adminer</a>
-            </li>
-        </ul>
-    </div>
+<body class="body">
+	<h1 class="services" >Services:</h1>
+	<div class="con">
+		<div class="wordpress">
+			<a href="https://aaqlzim.42.fr" target="_blank"><h3>WordPress</h3></a>
+		</div>
+		<hr class="dvide">
+		<div class="adminer">
+			<a href="http://localhost:5000" target="_blank"><h3>Adminer</h3></a>
+		</div>
+	</div>
+	<script>
+		const button = document.querySelector(".body");
+		button.addEventListener("mousemove", (e) => {
+		const { x, y } = button.getBoundingClientRect();
+		button.style.setProperty("--x", e.clientX - x);
+		button.style.setProperty("--y", e.clientY - y);
+		});
+	</script>
 </body>
 </html>
